tests/paczka1/fuzzy1/72924765.err
Error in line 15: A66 S678 81,1
Error in line 20: JOZqnHn6nxx A489 34,2
Error in line 28: JOZqnHn6nxx S678 -3,6
Error in line 30: hXN A66 14,0
Error in line 27: m38oyYqn S678 70,3
Error in line 34: A66 A66 1,7
